--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 .bg-slider {
-	width: 100vw;
-	height: 100vh;
+	width: 70%;
+	height: 800px;
 	background-position:center center;
 	background-size: cover;
 	display: flex;
